[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.dependencies]
common = { path = "./crates/common" }
models = { path = "./crates/models" }
wsclient = { path = "./crates/wsclient" }
server = { path = "./crates/server" }
# OTEL
log = { version = "0.4.25"}
# Serialization Dependencies
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# Async Dependencies
async-trait = { version = "0.1.86" }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio = { version = "1.39.0", features = ["full"] }
futures-util = { version = "0.3.31" }
futures = { version = "0.3.31" }
warp = { version = "0.3.7" }

# Miscellaneous
jiff = { version = "0.1.29" }
thiserror = { version = "2.0.11" }
config = { version = "0.15.7" }
rust_decimal = { version = "1.36.0" }
dotenvy = { version = "0.15.7" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.39" }
rust_decimal_macros = { version = "1.36.0" }
