[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
