[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
models = { workspace = true }
wsclient = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
tokio-tungstenite = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }


[dev-dependencies]
chrono = { workspace = true }
rust_decimal_macros = { workspace = true }
